spacing fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -383,7 +383,7 @@ footer {
 *******************************************/
 
 .events, .weather {
-    padding-top: 3rem;
+    padding-block: 3rem;
     text-align: center;
 }
 
